# papers

./: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  references.bib
.github/workflows/: ci.yml
_patches/: packages.diff
_script/: expand_template.py
_template/: common.sty
_template/ieee/: template.tex
bazel/: dependencies.bzl  dependencies_ext.bzl  latex_repos_impl.bzl  repos_ext.bzl  template.bzl
cpu_microbench/: abstract.tex  appendix.tex  data_structures.plantuml  keywords.tex  main.tex  workflow.drawio
