load("//bazel:template.bzl", "define_paper")

define_paper(
  name = "on_cpu_microbenchmarking",
  directory = "cpu_microbench",
  templates = ["ieee"],
  title = "Toolkit for micro-benchmarking of assembly basic blocks on modern CPU architectures",
  authors = [
      {
          "name": "Alexander Batashev",
          "affiliation": "Nizhny Novgorod State University",
          "department": "Department of High Performance Computation and System Programming",
          "city": "Nizhny Novgorod",
          "country": "Russia",
          "email": "alexbatashev@gmail.com",
      }
  ],
  class_options = {
      "ieee": ["conference", "a4paper"],
  },
)

